# sensorhub

./: .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  main.py  mongo-init.js  pyproject.toml
.github/workflows/: check-version.yml  ci.yml  release.yml
sensorhub/: api.py  config.py  minio.py  mongo.py  readings.py  reports.py  sensor_data.py
tests/: conftest.py  test_api.py
